# motherfluxer-model

./: .env.example  .env.huggingface  .gitignore  Dockerfile  README.md  docker-compose.yml  proxy.server.ts  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  runpod.yaml  setup.py  test_socket.js  test_websocket.js  test_ws.js  test_ws.py
.cursor/rules/: motherfluxerrules.mdc
.github/workflows/: docker.yml
docs/: ModelContainer.md
docs/UI Component Reference/: NginxWebSocket
src/: main.py
src/api/: routes.py  websocket.py
src/model/: __init__.py  model_manager.py
src/utils/: auth.py  config.py  rate_limiter.py  runpod_handler.py
tests/: conftest.py  requirements-test.txt  test_health.py  test_model_manager.py  test_websocket.py
