[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motherfluxer-model"
version = "0.1.0"
description = "MotherFluxer AI Model Service"
requires-python = ">=3.10"
dependencies = [
    "torch==2.2.0",
    "transformers==4.37.2",
    "runpod==1.5.0",
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "websockets==12.0",
    "pydantic==2.6.1",
    "python-dotenv==1.0.1",
    "accelerate==0.31.0",
    "safetensors>=0.5.2",
    "nvidia-cuda-runtime-cu12==12.1.105",
    "nvidia-cudnn-cu12==8.9.2.26",
    "nvidia-cublas-cu12==12.1.3.1"
] 